# UsoIA

./: .gitignore  BACKEND.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  FRONTEND.md  ROADMAP.md  UPDATER.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  limits.rs  main.rs  secret.rs  usage.rs
tasks/: SPEC_TEMPLATE.md
tasks/done/: 2026-07-01-T5-janela-redimensionavel.md  2026-07-01-ui-sabre-crescer-espacamento.md  2026-07-02-T6-sabre-glow-zorder.md  2026-07-02-T7-text-hover-completo.md
tasks/specs/: 2026-07-01-T1-maul-spacing-fix.md  2026-07-01-T2-plano-minimal-quickwins.md  2026-07-01-T3-sabre-maior.md  2026-07-01-T4-toggle-textos-hover.md
