[package]
name = "usoai"
version = "0.1.0"
description = "UsoAI - widget flutuante de uso do Claude Code"
authors = ["Gyga"]
edition = "2021"

[lib]
name = "usoai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
walkdir = "2"
ureq = { version = "2", features = ["json", "tls"] }
keyring = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
